--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,13 +14,8 @@
 @layer base {
   @font-face {
     font-family: 'Inter';
-    font-style: normal;
     font-weight: 100 900;
-    font-display: optional;
-    src: url('/fonts/inter-var-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
+    src: url('/fonts/Inter.ttf') format('truetype');
   }
 
   @font-face {
@@ -72,5 +67,17 @@
     width: 100vw;
     content: '';
     background-color: var(--tw-color-dark);
+  }
+
+  .form-group {
+    @apply my-2 flex flex-col;
+  }
+
+  .form-label {
+    @apply mb-2 block text-base font-bold text-dark dark:text-emerald-50;
+  }
+
+  .form-control {
+    @apply w-full appearance-none rounded border py-2 px-3 leading-tight text-dark shadow focus:outline-none;
   }
 }
